--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <div class="container header-inner">
+        <a href="/" class="logo">blanko</a>
+
+        <a href="mailto:mail@blanko.com" class="header-mail">mail@blanko.com</a>
+
+        <div class="nav-group">
+          <nav class="nav">
+            <ul class="nav-list">
+              <li><a href="#">Landing</a></li>
+              <li><a href="#">All pages</a></li>
+              <li><a href="#">Template</a></li>
+            </ul>
+          </nav>
+
+          <a href="#" class="btn-primary">Purchase template</a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
