--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blanko Template Marketplace</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="javascript" href="./script.js" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23FF6B4A'/%3E%3Crect x='25' y='25' width='50' height='50' fill='%23000' rx='5'/%3E%3C/svg%3E"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Header -->
